# nayar-campestre

./: GEMINI.md  README.md  dummy_players.csv  jugadores_registrados_200.csv  main.py  pdf_generator.py  pyproject.toml  schema.sql  seed_presidentes.sql  seed_staging_150pct.sql  seed_staging_70pct.sql  seed_staging_80pct.sql  seed_test.sql  test_supabase.py
.streamlit/: config.toml
components/: dialogs.py  header.py  metrics.py  sidebar.py
core/: capacity_planner.py  logic.py  scheduling_utils.py
custom_table_component/: index.html
database/: auth_schema.sql  ranking_schema.sql  schema.sql
database/migrations/: 002_category_to_registrations.sql  003_draw_persistence_and_finalization.sql  004_matches_and_courts.sql  005_force_recreate_matches.sql  add_gender_column.sql  add_ranking_seasons.sql
pages/admin/: ranking_admin.py  torneos.py
pages/auth/: login.py  logout.py
pages/public/: ranking.py
scripts/: check_supabase_schema.py  generate_sql_seed.py  generate_test_seeds.py  load_csv_to_supabase.py
services/: database.py  ranking_service.py  scheduling_service.py  tournament_service.py
utils/: auth.py  pdf_export.py  state.py  supabase_client.py  supabase_data.py  theme.py
views/: bracket.py  draw.py  export.py  finalize.py  landing.py  login.py  registration.py  schedule.py
