[project]
name = "nayar-campestre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.1.5",
    "pillow>=9.5.0",
    "reportlab>=4.4.3",
    "streamlit>=1.39.0",
    "streamlit-keyup>=0.3.0",
    "supabase>=0.7.1",
]
